--- a/app/polls/templates/polls/result.html
+++ b/app/polls/templates/polls/result.html
@@ -7,5 +7,5 @@
     {% endfor %}
 </ul>
 
-<a href="{% url 'polls:detail' question.pk %}">Vote agin</a>
+<a href="{% url 'polls:detail' question.pk %}">Vote again</a>
 <a href="{% url 'polls:index' %}">Return to polls index</a>
